# kg3dnav-cr

./: .eslintrc.json  .gitignore  .prettierrc  CLAUDE.md  GEMINI.md  README.md  WARP.md  index.html  manifest.webmanifest  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
.github/workflows/: build-matrix.yml  desktop.yml  web.yml
docs/: CHECKLIST-cleanroom-kg3d-27aug2025-2009.md  UUID.md
docs/ARCHITECTURE/: 20250927T213405Z-llm-neo4j-fixes.md  20250927T215801Z-llm-agentic-debug-sidebar.md  20250927T221352Z-vite-terminal-log-bridge.md  20250928T054038Z-window-title-blank-screen.md  20250929T040348Z-initial-load-overlay.md  ARCHITECTURE-qdrant-direct-20250927-225853.md  ARCHITECTURE-qdrant-direct-20250928-002240.md  ARCHITECTURE-qdrant-grpc-20250927-233128.md
docs/CHECKLISTS/: 20250927T213405Z-llm-neo4j-fixes.md  20250928T054038Z-window-title-blank-screen.md  20250929T040348Z-initial-load-overlay.md  CHECKLIST-ci-build-readiness-20250918-1030.md  CHECKLIST-config-sidebar-20250927-1955.md  CHECKLIST-hkg-defaults-20250926-1356.md  CHECKLIST-hkg-endpoints-20250926-1316.md  CHECKLIST-hkg-llm-defaults-20250926-1334.md  CHECKLIST-llm-agentic-debug-sidebar-20250927T215801Z.md  CHECKLIST-neo4j-bolt-build-banner-20250927-211210.md  CHECKLIST-qdrant-direct-20250927-225853.md  CHECKLIST-qdrant-direct-20250928-002240.md  CHECKLIST-qdrant-grpc-20250927-233128.md  CHECKLIST-version-build-hkg-connections-20250927-2018.md  (+3 more)
scripts/: compute-build-metadata.mjs
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
(+36 files in other folders)
