[package]
name = "kg3d_navigator_cleanroom"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Target Tauri 2 (architecture decision). If unavailable, you'll need to adjust locally.
tauri = { version = "2", features = ["tray-icon", "compression"] }

[build-dependencies]

